--- a/video_meeting/chat/templates/chat/index.html
+++ b/video_meeting/chat/templates/chat/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 <html lang="en">
-
+{% csrf_token %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
