--- a/video_meeting/static/css/main.css
+++ b/video_meeting/static/css/main.css
@@ -1,32 +1,95 @@
+:root {
+    --dark-grey: #202331;
+    --light-grey: #333748;
+    --orange: #FF7600;
+}
+
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    overflow: hidden;
 }
 
 .join {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark-grey);
+    padding: 10px 20px;
+    border-bottom: 1px solid var(--orange);
 }
 
-.join div {
+.join * {
     width: 35%;
 }
 
+.join div {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+
+#label-username {
+    display: none;
+}
+
+#username {
+    padding: 5px 10px;
+    border-radius: 10px;
+    border:none;
+    outline: none;
+    background-color: var(--light-grey);
+    color: white;
+    width: calc(100% - 130px);
+    font-size: 0.65rem;
+}
+
+#btn-join {
+    width: 120px;
+    padding: 8px;
+    font-size: 0.65rem;
+}
+
+#btn-join:disabled {
+    background-color: #FFB87B;
+}
+
+select {
+    padding: 6px;
+    background-color: var(--light-grey);
+    color: white;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    font-size: 0.65rem;
+}
+
 #state {
+    background-color: var(--orange);
+    text-align: center;
+    font-size: 0.875rem;
+    color: white;
+    padding: 0;
     position: absolute;
-    top: 0;
-    left: 1%;
+    top: 86px;
+    z-index: 10;
+    width: 100vw;
+    transition: height 0.2s ease, padding 0.2s ease;
+    /* height: 0; */
 }
 
 #state::first-letter {
     text-transform: uppercase;
 }
 
-
-.video-container {
-    display: grid;
-    grid-template-columns: 25% 25% 25%;
+.user-img:last-child {
+    cursor: pointer;
 }
 
 video {
@@ -37,8 +100,28 @@ video {
     background-color: black;
 }
 
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.local-video-container {
+    width: 250px;
+    position: absolute;
+    top: -500px;
+    left: 10px;
+    border: 1px solid var(--orange);
+    transition: top 0.5s ease;
+}
+
+.remote-video-container {
+    height: 90%;
+    width: 100%;
+}
+
 #local-video + .username {
-    color: rgb(72, 173, 72);
+    color: var(--orange);
 }
 
 #label-username {
@@ -46,24 +129,109 @@ video {
 }
 
 .username {
-    position: relative;
-    bottom: 10%;
+    position: absolute;
+    bottom: 0;
     background-color: #00000055;
     color: white;
 }
 
-.control {
-    position: absolute;
-    bottom: 0;
-    width: 80%;
+.main-grid {
+    height: calc(100vh - 86px);
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    overflow: hidden;
 }
 
-.control button {
-    color: green;
-    margin: 2%;
+.main-grid-container {
+    background-color: black;
+    flex: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: relative;
+}
+
+.control {
+    margin-bottom: auto;
+    margin-inline-end: 10px;
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 10px;
+    transition: bottom 0.2s ease;
+}
+
+.control * {
+    width: 110px;
+    padding: 5px 10px;
+}
+
+#student-states {
+    background-color: var(--dark-grey);
+    height: 100%;
+    max-width: 319px;
+    padding: 40px 10px 10px;
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    overflow: auto;
+}
+
+#student-states > p {
+    text-align: center;
+    color: var(--orange);
+}
+
+#student-states ul {
+    list-style: none;
+    min-width: 299px;
+}
+
+#student-states li:not(:first-child) {
+    border-top: 1px solid var(--orange);
+    margin-top: 10px;
+    padding-top: 10px;
+}
+#student-states li {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.states-card {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: auto;
+    gap: 8px;
+    font-size: 0.875rem;
+}
+
+.state {
+    font-size: 0.64rem;
+}
+
+.states-values {
+    display: flex;
+    gap: 8px;
+}
+
+.user-img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: var(--light-grey);
+    overflow: hidden;
+    padding: 7px;
+}
+
+.user-img img {
+    width: 100%;
+    height: 100%;
 }
 
 #chat {
@@ -99,22 +267,15 @@ video {
 }
 
 button {
-    border-radius: 3%;
+    border-radius: 10px;
     padding: 1%;
     border: none;
-    background-color: #b3b3b3;
-    color: rgb(73, 18, 18);
+    outline: none;
+    background-color: var(--orange);
+    color: white;
     cursor: pointer;
     text-transform: capitalize;
     transition: color 0.2s ease-in, background-color 0.2s ease-in;
-}
-
-button:hover {
-    background-color: #cccccc;
-}
-
-button:disabled {
-    visibility: hidden;
 }
 
 #states {
@@ -122,4 +283,8 @@ button:disabled {
     bottom: 50%;
     background-color: #00000055;
     color: white;
+}
+
+.capitalize {
+    text-transform: capitalize;
 }
